
   o OPTIONS page: new option "Print and Modify Steps w/o changing Gate".
     If enabled: note values will always be print regardless if they are played or not.
     Changing a note value won't automatically enable the gate

   o OPTIONS page: new option "Print Notes with transposed value".
     Enabled by default (due to change in V4.093), can be optionally disabled now.

   o AOUT: Channel 9..12/13..15 now set the gate pins #1/3/5/7 as documented (previously it was #1/2/3/4 due to a code translation error)
     New: gate pins #2/4/6/8 are now set whenever the velocity is >100.
     This way the pins can be used as an accent trigger

   o Bugfix for permanently cleared notes if live recording is used after previous step recording

   o ProgramChange Layer: steps now disabled by default when the track is cleared

   o experimental (might be optional in future): show measure and pattern step position in main screen


MIDIboxSEQ V4.094b
~~~~~~~~~~~~~~~~~~

   o fixed LED handling for common frontpanels (e.g. MUTE LED stayed active regardless of selected view)


MIDIboxSEQ V4.094
~~~~~~~~~~~~~~~~~

   o support for Antilog Frontpanel.
     The appr. HW configuration file can be found under hwcfg/antilog/MBSEQ_HW.V4

   o enhanced COPY/PASTE/CLEAR functions for following pages:
     - PATTERN page: copy/paste/clears all patterns.
                     Special function: by pressing COPY+PASTE the patterns will be pasted into the next slots
     - PARSEL page: copy/paste/clears the currently selected parameter layer only
     - TRGSEL page: copy/paste/clears the currently selected trigger layer only
     - INSSEL page: copy/paste/clears the currently selected instrument only
                    (useful for drums: corresponding trigger any parameter layers are cleared)

   o improved ALL button behaviour

   o New worflow for PATTERN page:
     GP 1/2, 5/6, 9/10, 13/14 allow to select group as well